# fresh-mcp-main

./: .gitignore  LICENSE  manifest.json
.github/instructions/: copilot-instructions.md
.github/workflows/: build-and-deploy-ghcr.yml  build-and-push.yml
Kubernetes/: deploy.md
Kubernetes/freshdesk-mcp/: Chart.yaml  production.yaml  sandbox.yaml
Kubernetes/freshdesk-mcp/templates/: _helpers.tpl  classes.yaml  deployment.yaml  keyvault.yaml  service.yaml  serviceaccounts.yaml
src/: Dockerfile  build-docker.sh
src/freshdesk_mcp/: pyproject.toml  server.py
src/freshdesk_mcp/.well-known/: ai-plugin.json
tests/: Freshservice-MCP-Server.swagger.json  Swagger.yml
tools/: mcp_bridge.py
