[project]
name = "inspark-freshdesk-mcp"
version = "1.2.0"
description = "An MCP server for Freshdesk"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "mcp",
    "pydantic",
    "uvicorn[standard]",
    "fastapi",
]

[[project.authors]]
name = "Bas Berkhout"
email = "bas.berkhout@inspark.nl"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freshdesk_mcp"]

[project.scripts]
freshdesk-mcp = "freshdesk_mcp.server:main"


